--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <div id="searchResults" style="margin-top: 20px;"></div>
   
     
-      <a href="SubPages/how_to.html">HowTo</a>
-      <a href="SubPages/shelter.html">Shelters</a>
-      <a href="SubPages/traffic.html">Traffic</a>
-      <a href="SubPages/weather.html">Weather</a>
-      <a href="SubPages/hospital.html">Hospitals</a>
+      <a href="how_to.html">HowTo</a>
+      <a href="shelter.html">Shelters</a>
+      <a href="traffic.html">Traffic</a>
+      <a href="weather.html">Weather</a>
+      <a href="hospital.html">Hospitals</a>
     <script src="script.js"></script>
   </div>
 
